# patina-apps

./: .gitignore  .markdownlint.yml  Cargo.toml  Makefile.toml  README.md  codecov.yml  cspell.yml  deny.toml
.github/workflows/: ci-workflow.yml
docs/services_benchmark_test/: benchmarks.md
services_benchmark_test/: Cargo.toml  ServicesBenchmarkTest.inf
services_benchmark_test/src/: bench.rs  error.rs  lib.rs  main.rs  measure.rs
services_benchmark_test/src/bench/: controller.rs  event.rs  image.rs  memory.rs  misc.rs  mod.rs  protocol.rs  tpl.rs
