#
# Copyright (c) Microsoft Corporation. All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause-Patent
#
[package]
name = "services_benchmark_test"
version = "0.0.1"
edition = "2024"
authors = ["Microsoft"]
license.workspace = true

[lib]
name = "services_benchmark_test"
path = "src/lib.rs"

[[bin]]
name = "services_benchmark_test"
path = "src/main.rs"

[dependencies]
mu_rust_helpers = { workspace = true }

cfg-if = { workspace = true }
linked_list_allocator = "0.10.5"
log = { workspace = true }
r-efi = { workspace = true }
rolling-stats =  { workspace = true }
uefi = { version = "0.36.0", features = ["alloc", "logger", "global_allocator"] }
uuid =  { workspace = true }

patina = { workspace = true }

[dev-dependencies]
mockall = "0.13.0"
