#
# Copyright (c) Microsoft Corporation.
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "services_benchmark_test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Core service benchmarks"

[lib]
name = "services_benchmark_test"
path = "src/lib.rs"

[[bin]]
name = "services_benchmark_test"
path = "src/main.rs"

[dependencies]
mu_rust_helpers = { workspace = true }

cfg-if = { workspace = true }
log = { workspace = true }
r-efi = { workspace = true }
rolling-stats =  { workspace = true }
uefi = { version = "0.36.0", features = ["alloc", "logger", "global_allocator"] }
uuid =  { workspace = true }

patina = { workspace = true }

[dev-dependencies]
mockall = "0.13.0"
